--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -10,9 +10,8 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="/bower_components/modernizr/modernizr.js"></script>
+        <link rel="stylesheet" href="webapp/{{app.env}}/css/main.css">
+        <script src="bower_components/modernizr/modernizr.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -21,10 +20,8 @@
 
         {{{ yield }}}
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
         <script src="/webapp/config.js"></script>
-        <script src="/bower_components/requirejs/require"></script>
+        <script src="bower_components/requirejs/require.js"></script>
 
 
     </body>
