requiring first template and setting up route

--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -48,7 +48,7 @@
                 </div>
                 <!-- /.container -->
             </nav>
-            <div class="container">
+            <div id="__webapp" class="container">
                 {{{ yield }}}
             </div>
 
