--- a/webapp/styles/main.scss
+++ b/webapp/styles/main.scss
@@ -1,3 +1,6 @@
+@import "sass/variables";
+@import "sass/terminal";
+
 body {
   padding-top: 70px;
   /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
