--- a/webapp/views/home/index.html
+++ b/webapp/views/home/index.html
@@ -1,5 +1,1 @@
-<div class="row terminal__container">
-	<div class="col-md-12"> 
-		<textarea class="terminal__text" rows="10"></textarea>
-	</div>
-</div>
+{{#terminal '' /}}
