--- a/webapp/components/terminal/terminal.scss
+++ b/webapp/components/terminal/terminal.scss
@@ -1,15 +1,29 @@
 ﻿.terminal {
     &__ {
         &container {
-            textarea {
-                width: 100%;
-                font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
-            }
+           width: 100%;
+           pre{
+               margin-bottom: 0;
+           }
+           .panel-body{
+               padding: 0;
+           }
         }
 
         &text {
             color: white;
             background-color: #2A2A2A;
+            font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, 'Bitstream Vera Sans Mono', monospace;
+            
+            &--output{
+                overflow: auto;
+                min-height:600px;
+                 white-space: pre; 
+            }
+            &--input{
+                width: 100%;
+            }
         }
+        
     }
 }
