bringing in xeditable and not wrapping body in container

--- a/webapp/components/terminal/template/index.html
+++ b/webapp/components/terminal/template/index.html
@@ -1,8 +1,7 @@
 <div class="terminal__container">
 	<div class="panel panel-default">
 		<div class="panel-heading">
-			<h4>{{name}}</h4>
-			<div>{{port}}</div>
+			<h4 ><span data-bind="editable: nickname" title="{{port}}"></span></h4>
 		</div>
 		<div class="panel-body">
 			<div class="row">
