--- a/webapp/styles/main.scss
+++ b/webapp/styles/main.scss
@@ -4,3 +4,11 @@ body {
   padding-top: 70px;
   /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
+.editable-click{
+    cursor: pointer;
+}
+
+.app-container{
+    margin-left: 20px;
+    margin-right: 20px;
+}
