--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html class="no-js" lang="">
 <head>
     <meta charset="utf-8">
@@ -19,7 +19,7 @@
 
             <!-- Navigation -->
             <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-                <div class="container">
+                <div class="">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -48,7 +48,7 @@
                 </div>
                 <!-- /.container -->
             </nav>
-            <div id="__webapp" class="container">
+            <div id="__webapp" class="app-container">
                 {{{ yield }}}
             </div>
 
