using tabs with ability to add and remove them

--- a/views/layouts/styles-development.html
+++ b/views/layouts/styles-development.html
@@ -1,2 +1,4 @@
 <link rel="stylesheet" href="webapp/dev/css/main.css">
 <link rel="stylesheet" href="webapp/dev/css/bootstrap.css">
+<link rel="stylesheet" href="webapp/dev/css/fontawesome.css">
+
