starting to implement ability to load a specific path

--- a/webapp/views/home/index.html
+++ b/webapp/views/home/index.html
@@ -11,3 +11,11 @@
 {{#if selectedTerminal}}
 <div data-bind="terminal: selectedTerminal"></div>
 {{/if}}
+
+{{#if savedTerminals}}
+<ul>
+	{{#foreach savedTerminalNames}}
+	<li>{{$data}}</li>
+	{{/foreach}}
+</ul>
+{{/if}}
